--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+
+        <!-- Profile Picture -->
+        <div style="text-align: center;">
+            <img src="https://antoniovfonseca.github.io/photo_profile.jpg" alt="Antonio Fonseca Profile Picture" style="width: 200px; border-radius: 50%;">
+        </div>
+
+        <!-- About Me Section -->
+        <section id="about-me">
+            <h2>About Me</h2>
+            <p>I hold a bachelor's degree in Environmental Engineering from the State University of Pará and a postgraduate degree in Statistics from the Federal University of Pará. I was a researcher at Imazon, leading the generation and dissemination of deforestation data and changes in land use and land cover in the Amazon biome. I also empowered other Amazonian countries to generate their land cover change data. I am currently a Ph.D. student in the Graduate School of Geography at Clark University. My research focuses on Geographic Information Systems (GIS), Remote Sensing, Land Use and Land Cover Maps, Spatial Analysis, and Uncertainty in Spatial Data.</p>
+        </section>
         
         <script src="" async defer></script>
     </body>
