--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<!-- <html>
-    <head>
+<!-- <!-- <html>
+    <head> -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Personal Website</title>
@@ -14,8 +14,11 @@
         <header> This is my webpage </header>
         <h1 style = "font-size:60px;">Heading 1</h1>
         <h5 style = "color:blue">Heading 5</h5>
-        <p style = "font-size:60px;">Heading 1 </p> -->
+        <p style = "font-size:60px; color:red">Heading 1 </p> -->
+
+
         <!-- Below is Introduction section-->
+
 
     </head>
         <!-- Bookmark Section -->
@@ -29,9 +32,8 @@
     <body>
         <nav>
             <ul>
-                <li><a href="#intro"> Introduction</a>/li>
-                <li><a href="#edu"> Education</a>/li>
-                <li><a href="#Pro"> Projects</a>/li>
+                <li><a href="#intro"> Introduction</a>
+                <li><a href="#edu"> Education</a>                <li><a href="#Pro"> Projects</a>
             </ul>
         </nav>
 
@@ -51,14 +53,12 @@
         <p style="text-align:center; line-height:25px;">Visiting Assistant Professor</p>
         Geography Department. Clark University</p>
         <figure>
-            <imag src="clark_university_logo.png" alt="">
+            <a href="statistics.html">
+           <img src="clark_university_logo.png" alt="" alt="" width="250" height="180">
             <figcaption>Clark Logo</figcaption>
         </figure>
     </div>
-
-
-    </div>
-
+    <div>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -71,7 +71,7 @@
 
         <!-- About Me Section -->
         <section id="about-me">
-            <h2>About Me</h2>
+            <h2 style="font: size 80px; color:black;">About Me</h2>
             <p>I hold a bachelor's degree in Environmental Engineering from the State University of Pará and a postgraduate degree in Statistics from the Federal University of Pará. I was a researcher at Imazon, leading the generation and dissemination of deforestation data and changes in land use and land cover in the Amazon biome. I also empowered other Amazonian countries to generate their land cover change data. I am currently a Ph.D. student in the Graduate School of Geography at Clark University. My research focuses on Geographic Information Systems (GIS), Remote Sensing, Land Use and Land Cover Maps, Spatial Analysis, and Uncertainty in Spatial Data.</p>
         </section>
         </section>
@@ -82,6 +82,7 @@
         </footer>
 
         <script src="" async defer></script>
+    <iframe 
     </body>
 
 </html>
