--- a/index.html
+++ b/index.html
@@ -2,38 +2,62 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<!-- <!-- <html>
+<!--[if gt IE 8]>      <html class="no-js"> <!-<![endif]-->
+<!-- <!-<html>
     <head> -->
-        <meta charset="utf-8">
+        <!-- <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Personal Website</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="">
-        <header> This is my webpage </header>
-        <h1 style = "font-size:60px;">Heading 1</h1>
-        <h5 style = "color:blue">Heading 5</h5>
-        <p style = "font-size:60px; color:red">Heading 1 </p> -->
-
+        <link rel="stylesheet" href=""> -->
+        <!-- <header>
+            This is my webpage
+        </header> -->
+        <!-- <h1 style = "font-size:60px; color:black; ">Introduction</h1> -->
+        <!-- <h5 style = "color:blue">Heading 5</h5> -->
+        <p style = "font-size:50px;
+                    color:red;
+                    font-weight:bold"
+                    ;>This is my website (beta version)</p>
 
         <!-- Below is Introduction section-->
+<style>
+    .intro_p{
+        color:red
+    }
+    nav ul li a{
+        color:blueviolet;
+    }
+    a:link{
+        color:green;
+    }
+    a:visited{
+        color: blue
+    }
+    a:hover{
+        cursor: pointer;
+    }
+    /* *{
+        color:yellow;
+    } */
+</style>
 
-
-    </head>
-        <!-- Bookmark Section -->
+    <!-- </head>
+        Bookmark Section
         <body>
             <header> <a href="#Pro02">Projects<a>/header>
             <h1 id = "Pro02">Project section</h1>
          </body>
-        <!-- <section id="bookmark">
+    <section id="bookmark">
             <h1 id>Pro>project</h1> -->
     
     <body>
         <nav>
             <ul>
                 <li><a href="#intro"> Introduction</a>
-                <li><a href="#edu"> Education</a>                <li><a href="#Pro"> Projects</a>
+                <li><a href="#edu"> Education</a>
+                <li><a href="#Pro"> Projects</a>
             </ul>
         </nav>
 
@@ -49,8 +73,14 @@
 
     <!-- Intro Section -->
     <div class = "intro" id = "intro">
-        <img class = 'headshot' src="photo_profile.jpg" alt="" width="250" height="180">
-        <p style="text-align:center; line-height:25px;">Visiting Assistant Professor</p>
+        <img class = 'headshot',
+                src="photo_profile.jpg",
+                alt="",
+                width="250",
+                height="180">
+        <p style = "text-align:center;
+                    line-height:25px;"
+                class="intro_p">Visiting Assistant Professor<
         Geography Department. Clark University</p>
         <figure>
             <a href="statistics.html">
@@ -71,7 +101,8 @@
 
         <!-- About Me Section -->
         <section id="about-me">
-            <h2 style="font: size 80px; color:black;">About Me</h2>
+            <h2 style = "font: size 80px;
+                       color:black;">About Me</h2>
             <p>I hold a bachelor's degree in Environmental Engineering from the State University of Pará and a postgraduate degree in Statistics from the Federal University of Pará. I was a researcher at Imazon, leading the generation and dissemination of deforestation data and changes in land use and land cover in the Amazon biome. I also empowered other Amazonian countries to generate their land cover change data. I am currently a Ph.D. student in the Graduate School of Geography at Clark University. My research focuses on Geographic Information Systems (GIS), Remote Sensing, Land Use and Land Cover Maps, Spatial Analysis, and Uncertainty in Spatial Data.</p>
         </section>
         </section>
