--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
             <section id="poster">
                 <h2>Poster</h2>
                 <ul>
-                    <li>Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil <a href="https://aag.secure-platform.com/aag2024/gallery/rounds/74/details/50856" target="_blank">AAG2024</a></li>
+                    <ul>
+                        <li>Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil <a href="https://aag.secure-platform.com/aag2024/gallery/rounds/74/details/50856" target="_blank">AAG2024</a></li>
+                        <embed src="https://github.com/antoniovfonseca/antoniovfonseca.github.io/blob/main/antfonseca_aag2024poster.pdf" type="application/pdf" width="100%" height="600px" />
+                    </ul>                    
                 </ul>
             </section>
 
