--- a/index.html
+++ b/index.html
@@ -98,12 +98,10 @@
             <!-- Poster Section -->
             <section id="poster">
                 <h2>Poster</h2>
-                <ul>
                     <ul>
-                        <li>Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil <a href="https://aag.secure-platform.com/aag2024/gallery/rounds/74/details/50856" target="_blank">AAG2024</a></li>
-                        <embed src="https://github.com/antoniovfonseca/antoniovfonseca.github.io/blob/main/antfonseca_aag2024poster.pdf" type="application/pdf" width="100%" height="600px" />
+                        <li>Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil <a href="https://aag.secure-platform.com/aag2024/gallery/rounds/74/details/50856" target="_blank">[AAG 2024]</a></li>
+                        <img src="https://raw.githubusercontent.com/antoniovfonseca/antoniovfonseca.github.io/main/antfonseca_aag2024poster.jpg" alt="AAG2024 Poster" width="50%" height="auto" />
                     </ul>                    
-                </ul>
             </section>
 
             <!-- My Apps Section -->
