--- a/index.html
+++ b/index.html
@@ -97,12 +97,20 @@
 
             <!-- Poster Section -->
             <section id="poster">
-                <h2>Poster</h2>
+                <h2>My Posters</h2>
                     <ul>
                         <li>Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil <a href="https://aag.secure-platform.com/aag2024/gallery/rounds/74/details/50856" target="_blank">[AAG 2024]</a></li>
                         <img src="https://raw.githubusercontent.com/antoniovfonseca/antoniovfonseca.github.io/main/antfonseca_aag2024poster.jpg" alt="AAG2024 Poster" width="50%" height="auto" />
                         <li>Comparison Time Series Maps of Deforestation in the Amazon [AAAS 2025]</li>
                         <img src="https://raw.githubusercontent.com/antoniovfonseca/antoniovfonseca.github.io/main/AAASEPosterAntonioFonseca1.jpg" alt="AAG2024 Poster" width="50%" height="auto" />
+                    </ul>                    
+            </section>
+
+            <!-- Maps Section -->
+            <section id="map">
+                <h2>My Maps</h2>
+                    <ul>
+                        <li>Variables for modeling the expansion of pivot irrigation in western Bahia</li>
                     </ul>                    
             </section>
 
