--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="#award" aria-label="Awards">Awards</a></li>
                     <li><a href="#Pro" aria-label="Projects">Projects</a></li>
                     <li><a href="#poster" aria-label="My Posters">Awards</a></li>
-                    <li><a href="#map" aria-label="My Maps">Awards</a></li>
+                    <li><a href="#map" aria-label="My Maps">My Maps</a></li>
                     <li><a href="#my-apps" aria-label="My Apps">My Apps</a></li>
                 </ul>
             </nav>
