--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
                 </figure>
                 <div class="about-me">
                     <h2>About Me</h2>
-                    <p>I hold a bachelor's degree in Environmental Engineering from the State University of Pará and a postgraduate degree in Statistics from the Federal University of Pará. I was a researcher at Imazon, leading the generation and dissemination of deforestation data and changes in land use and land cover in the Amazon biome. I also empowered other Amazonian countries to generate their land cover change data. I am currently a Ph.D. student in the Graduate School of Geography at Clark University. My research focuses on Geographic Information Systems (GIS), Remote Sensing, Land Use and Land Cover Maps, Spatial Analysis, and Uncertainty in Spatial Data.</p>
+                    <p>I'm from the Brazilian Amazon, a region that has always inspired me to investigate environmental dynamics and landscape change. With more than 10 years' experience as a researcher, I have focused my career on Geographic Information Systems (GIS) and remote sensing, with a special interest in Spatial Analysis and Uncertainty in Spatial Data.
+
+                        Throughout my career, I have contributed to the dissemination and training of landscape change mapping technologies in Amazonian countries in South America. Among my contributions, I highlight the generation of time series maps of deforestation and land use, essential tools for environmental monitoring in the region.
+                        
+                        Currently, my PhD focuses on understanding how to identify patterns of change over time in multi-category maps. I am especially interested in the challenges and opportunities presented by the proliferation of maps and the democratization of technologies that make it possible to create maps from different sources and methodologies.</p>
                 </div>
             </div>
 
@@ -99,7 +103,7 @@
 
             <!-- Poster Section -->
             <section id="poster">
-                <h2>My Posters</h2>
+                <h2>My Poster Gallery</h2>
                     <ul>
                         <li>Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil <a href="https://aag.secure-platform.com/aag2024/gallery/rounds/74/details/50856" target="_blank">[AAG 2024]</a></li>
                         <img src="https://raw.githubusercontent.com/antoniovfonseca/antoniovfonseca.github.io/main/antfonseca_aag2024poster.jpg" alt="AAG2024 Poster" width="50%" height="auto" />
@@ -110,7 +114,7 @@
 
             <!-- Maps Section -->
             <section id="map">
-                <h2>My Maps</h2>
+                <h2>My Map Gallery</h2>
                     <ul>
                         <li>Variables for modeling the expansion of pivot irrigation in western Bahia</li>
                     </ul>                    
