--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <li><a href="#edu" aria-label="Education">Education</a></li>
                     <li><a href="#award" aria-label="Awards">Awards</a></li>
                     <li><a href="#Pro" aria-label="Projects">Projects</a></li>
-                    <li><a href="#poster" aria-label="My Posters">My Posters</a></li>
-                    <li><a href="#map" aria-label="My Maps">My Maps</a></li>
+                    <li><a href="#poster" aria-label="My Posters">Poster Gallery</a></li>
+                    <li><a href="#map" aria-label="My Maps">Map Gallery</a></li>
                     <li><a href="#my-apps" aria-label="My Apps">My Apps</a></li>
                 </ul>
             </nav>
@@ -103,7 +103,7 @@
 
             <!-- Poster Section -->
             <section id="poster">
-                <h2>My Poster Gallery</h2>
+                <h2>Poster Gallery</h2>
                     <ul>
                         <li>Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil <a href="https://aag.secure-platform.com/aag2024/gallery/rounds/74/details/50856" target="_blank">[AAG 2024]</a></li>
                         <img src="https://raw.githubusercontent.com/antoniovfonseca/antoniovfonseca.github.io/main/antfonseca_aag2024poster.jpg" alt="AAG2024 Poster" width="50%" height="auto" />
@@ -114,9 +114,9 @@
 
             <!-- Maps Section -->
             <section id="map">
-                <h2>My Map Gallery</h2>
+                <h2>Map Gallery</h2>
                     <ul>
-                        <li>Variables for modeling the expansion of pivot irrigation in western Bahia</li>
+                        <li>Expansion of pivot irrigation in Western Bahia, Brazil</li>
                     </ul>                    
             </section>
 
