--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <section id="map">
                 <h2>Map Gallery</h2>
                     <ul>
-                        <li>Expansion of pivot irrigation in Western Bahia, Brazil</li>
+                        <li>Expansion of pivot irrigation in Western Bahia, Brazil <a href="https://antoniovfonseca.github.io/NASA/" target="_blank">link</a></li>
                     </ul>                    
             </section>
 
