--- a/index.html
+++ b/index.html
@@ -69,7 +69,17 @@
             <section id="Pro">
                 <h2>Projects</h2>
                 <p>I have worked on several research projects focusing on Geographic Information Systems (GIS), Remote Sensing, and Land Use and Land Cover Mapping.</p>
-                
+
+                <!-- SAD Logo with Link -->
+                <div class="project-logo">
+                    <figure>
+                        <a href="https://imazon.org.br/en/imprensa/understanding-the-imazon-monitoring-system/" target="_blank" aria-label="Deforestation Alert System">
+                            <img src="Logo_SAD.jpg" alt="SAD Logo">
+                        </a>
+                        <figcaption>Deforestation Alert System (SAD,in its Portuguese acronym)</figcaption>
+                    </figure>
+                </div>
+
                 <!-- MapBiomas Logo with Link -->
                 <div class="project-logo">
                     <figure>
