--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- SAD Logo with Link -->
                 <div class="project-logo">
                     <figure>
-                        <a href="https://imazon.org.br/en/imprensa/understanding-the-imazon-monitoring-system/" target="_blank" aria-label="Deforestation Alert System">
+                        <a href="https://imazon.org.br/en/imprensa/understanding-the-imazon-monitoring-system/" target="_blank" aria-label="Deforestation Alert System (SAD,in its Portuguese acronym)">
                             <img src="Logo_SAD.jpg" alt="SAD Logo">
                         </a>
                         <figcaption>Deforestation Alert System (SAD,in its Portuguese acronym)</figcaption>
