--- a/index.html
+++ b/index.html
@@ -179,6 +179,16 @@
             };
         </script>
 
+            <!-- Latest Academic Contributions -->
+            <section id="pub">
+                <h2>Latest Academic Contributions</h2>
+                    <ul>
+                        <li>Fonseca, A. V. G., & Pontius Jr, R. G. (2024). Comparison among time series maps of deforestation in the Amazon: How independent monitoring systems relate to official data. In Advances in Environmental Change and Land Use (pp. 123-145). Environmental Research Press. <a href="https://doi.org/10.37423/2024.edcl964" target="_blank">https://doi.org/10.37423/2024.edcl964</a></li>
+                        
+                        <li>Souza, C. M., Oliveira, L. A., S., J., Ferreira, B. G., Fonseca, A. V., & Siqueira, J. V. (2023). Landsat sub-pixel land cover dynamics in the Brazilian Amazon. Frontiers in Forests and Global Change, 6, 1294552. <a href="https://doi.org/10.3389/ffgc.2023.1294552" target="_blank">https://doi.org/10.3389/ffgc.2023.1294552</a></li>
+                    </ul>                    
+            </section>
+
         <!-- Footer Section -->
         <footer>
             <p>Antonio Fonseca</p>
