--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <section id="poster">
                 <h2>Poster Gallery</h2>
                     <ul>
-                        <li>Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil <a href="https://aag.secure-platform.com/aag2024/gallery/rounds/74/details/50856" target="_blank">[AAG 2024]</a></li>
+                        <li>Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil <a href="https://aag.secure-platform.com/aag2024/gallery/rounds/74/details/50856" target="_blank">Patterns of Change in Irrigation and Land Cover in Western Bahia, Brazil</a></li>
                         <img src="https://raw.githubusercontent.com/antoniovfonseca/antoniovfonseca.github.io/main/antfonseca_aag2024poster.jpg" alt="AAG2024 Poster" width="50%" height="auto" />
                         <li>Comparison Time Series Maps of Deforestation in the Amazon [AAAS 2025]</li>
                         <img src="https://raw.githubusercontent.com/antoniovfonseca/antoniovfonseca.github.io/main/AAASEPosterAntonioFonseca1.jpg" alt="AAG2024 Poster" width="50%" height="auto" />
