--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="#poster" aria-label="My Posters">Poster Gallery</a></li>
                     <li><a href="#map" aria-label="My Maps">Map Gallery</a></li>
                     <li><a href="#my-apps" aria-label="My Apps">My Apps</a></li>
+                    <li><a href="#my-apps" aria-label="Latest Academic Contributions">Latest Academic Contributions</a></li>
                 </ul>
             </nav>
         </header>
