--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- Introduction Section -->
             <section id="intro">
                 <h2>Introduction</h2>
-                <p>Welcome to my personal website! This is a space where I share my academic journey, research, and projects related to my expertise in Geographic Information Systems (GIS), and Remote Sensing.</p>
+                <p>Welcome to my personal website! This is a space where I share my academic journey, research, and projects related to my expertise in SIG, and Remote Sensing.</p>
             </section>
 
             <!-- Education Section -->
