--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
             <section id="pub">
                 <h2>Latest Academic Contributions</h2>
                     <ul>
+                        <li>Pontius Jr, R. G., & da Fonseca, A. V. G. (2025). A GIS Method to Summarize Changes Among Classes During a Time Series With an Application to Land Cover in Western Bahia, Brazil. Transactions in GIS, 29(7), e70136. <a href="https://doi.org/10.1111/tgis.70136" target="_blank">https://doi.org/10.1111/tgis.70136</a></li>
+
                         <li>Fonseca, A. V. G., & Pontius Jr, R. G. (2024). Comparison among time series maps of deforestation in the Amazon: How independent monitoring systems relate to official data. In Advances in Environmental Change and Land Use (pp. 123-145). Environmental Research Press. <a href="https://doi.org/10.37423/2024.edcl964" target="_blank">https://doi.org/10.37423/2024.edcl964</a></li>
                         
                         <li>Souza, C. M., Oliveira, L. A., S., J., Ferreira, B. G., Fonseca, A. V., & Siqueira, J. V. (2023). Landsat sub-pixel land cover dynamics in the Brazilian Amazon. Frontiers in Forests and Global Change, 6, 1294552. <a href="https://doi.org/10.3389/ffgc.2023.1294552" target="_blank">https://doi.org/10.3389/ffgc.2023.1294552</a></li>
